2023-09-18T16:21:54Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6225260714 # 1176
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-18
* notice: last 14d: unq all: 2 3
* notice: prev accum: outdated-unq outdated-all / unq all: 256 862 / 259 867
* notice: next accum: outdated-unq outdated-all / unq all: 257 864 / 259 867
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-09-04] / []

2023-09-17T08:18:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6212492616 # 1172
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-17
* notice: last 14d: unq all: 3 5
* notice: prev accum: outdated-unq outdated-all / unq all: 255 858 / 259 867
* notice: next accum: outdated-unq outdated-all / unq all: 256 862 / 259 867
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-09-03] / []

2023-09-16T16:19:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6208387352 # 1170
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-16
* notice: last 14d: unq all: 4 9
* notice: prev accum: outdated-unq outdated-all / unq all: 255 858 / 258 865
* notice: next accum: outdated-unq outdated-all / unq all: 255 858 / 259 867
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-09-16]

2023-09-15T08:20:46Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6195672139 # 1166