@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-09-18T16:21:54Z",
+  "timestamp" : "2023-09-19T01:11:56Z",
   "count_outdated" : 864,
   "uniques_outdated" : 257,
-  "count" : 867,
-  "uniques" : 259,
+  "count" : 869,
+  "uniques" : 260,
   "views" : [
     {
       "timestamp": "2023-09-11T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2023-09-16T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-09-18T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
